💄 Fix spacing variables on note

--- a/assets/sass/pages/_note.sass
+++ b/assets/sass/pages/_note.sass
@@ -1,6 +1,6 @@
 .note-page .note
-  margin-top: $space-128
-  margin-bottom: $space-128
+  margin-top: $space-xxxl
+  margin-bottom: $space-xxxl
 
   .container
     @extend .gridSystem
@@ -22,43 +22,43 @@
   .notes-back
     display: inline-flex
     align-items: center
-    margin-bottom: $space-48
+    margin-bottom: $space-m
 
     .icon
       padding-right: 8px
 
   .note-title
-    margin-bottom: $space-16
+    margin-bottom: $space-xs
 
   .note-date
-    margin-bottom: $space-32
+    margin-bottom: $space-s
 
   .note-body
-    margin-bottom: $space-128
+    margin-bottom: $space-xxxl
 
     p:not(small)
       @extend .emphasis
       @extend .text-tertiary-dark
-      mb$space-24
+      margin-bottom: $space-x
 
     p:not(:last-of-type)
-      margin-bottom: $space-32
+      margin-bottom: $space-s
 
     h2
       @extend .heading-2
       @extend .text-secondary-dark
-      margin-top: $space-48
-      margin-bottom: $space-16
+      margin-top: $space-m
+      margin-bottom: $space-xs
 
     h3
       @extend .heading-3
       @extend .text-secondary-dark
-      margin-top: $space-48
-      margin-bottom: $space-12
+      margin-top: $space-m
+      margin-bottom: $space-xxs
 
     img
       max-width: 100%
-      margin-bottom: $space-48
+      margin-bottom: $space-m
 
   .note-end
     display: flex
